--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.NewProject"
         tools:targetApi="31">
         <activity
+            android:name=".VehicleProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddVehicleActivity"
+            android:exported="false" />
+        <activity
             android:name=".VehicleInfoActivity"
             android:exported="false" />
         <activity
