--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.NewProject"
         tools:targetApi="31">
         <activity
+            android:name=".ProfilePageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RideHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".VehicleProfileActivity"
             android:exported="false" />
         <activity
